[package]
name = "login_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
hyper = { version = "1.8.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"